Commit DTO e crud funcionando

--- a/Views/Usuarios/Edit.cshtml
+++ b/Views/Usuarios/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CareWithLoveApp.Models.Entities.Usuario
+﻿@model CareWithLoveApp.Models.InputModels.UsuarioInputModel
 
 @{
     ViewData["Title"] = "Edit";
