--- a/Views/Usuarios/Create.cshtml
+++ b/Views/Usuarios/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CareWithLoveApp.Models.Entities.Usuario
+﻿@model CareWithLoveApp.Models.InputModels.UsuarioInputModel
 
 @{
     ViewData["Title"] = "Create";
@@ -64,5 +64,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
