--- a/Views/Usuarios/Delete.cshtml
+++ b/Views/Usuarios/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CareWithLoveApp.Models.Entities.Usuario
+﻿@model CareWithLoveApp.Models.OutputModels.UsuarioViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -30,28 +30,10 @@
             @Html.DisplayFor(model => model.UsuarioEmail)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioSenha)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UsuarioSenha)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioTelefone)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UsuarioTelefone)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DataNascimento)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DataNascimento)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioLogradouro)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UsuarioLogradouro)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UsuarioTipo)
@@ -67,3 +49,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+  
