--- a/Views/Dependentes/Create.cshtml
+++ b/Views/Dependentes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CareWithLoveApp.Models.Entities.Dependente
+﻿@model CareWithLoveApp.Models.InputModels.DependenteInputModel
 
 @{
     ViewData["Title"] = "Create";
