--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Dependentes" asp-action="Index">Dependentes</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ServicoClientes" asp-action="Index">ServicoClientes</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
