corrigir create avaliaçao

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cuidadores" asp-action="Index">Cuidadores</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Avaliacoes" asp-action="Index">Avaliacoes</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
