Commit meio context funcionando

--- a/Views/Avaliacoes/Index.cshtml
+++ b/Views/Avaliacoes/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayFor(modelItem => item.Review)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Usuario.UsuarioId)
+                @Html.DisplayFor(modelItem => item.Usuario.Id)
             </td>
             <td>
                 <a asp-action="Delete" asp-route-id="@item.AvaliacaoId">Delete</a>
