commit com coisas funcionando a grosso modo

--- a/Views/Cuidadores/Index.cshtml
+++ b/Views/Cuidadores/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayNameFor(model => model.Especializacoes)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UsuarioNome)
+                @Html.DisplayNameFor(model => model.CuidadorNome)
             </th>
             <th></th>
         </tr>
@@ -52,7 +52,7 @@
                 @Html.DisplayFor(modelItem => item.Especializacoes)
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.UsuarioNome)
+                    @Html.DisplayFor(modelItem => item.CuidadorNome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CuidadorId">Edit</a> |
