--- a/Views/Cuidadores/Details.cshtml
+++ b/Views/Cuidadores/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.Especializacoes)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UsuarioNome)
+            @Html.DisplayNameFor(model => model.CuidadorNome)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UsuarioId)
+            @Html.DisplayFor(model => model.CuidadorNome)
         </dd>
     </dl>
 </div>
